@@ -1,4 +1,6 @@
-7542015 (HEAD, origin/HEAD, origin/7.x-1.x, 7.x-1.x) Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
+1fb4941 (HEAD, 7.x-1.x) Issue #2255597 by interdruper, alex-bukach: Make it work with jQuery 1.10 and above
+26a853f (origin/HEAD, origin/7.x-1.x) Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
+7542015 Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
 7b9f1a5 Issue #2625650 by Infanty, interdruper: Fix PHP syntax highlighting: missing base_path in library source path.
 ab41d17 Code styling: replacing tabs by spaces in all source files.
 418888c Issue #2330383 by mkhamash,interdruper: Multi-site libraries path.
